# cezdev

./: .gitignore  EZDEV.bat  EZDEV.sh  cezdev.bat  hello.json
ccore/c3dclasses/cvendors/: StdIn.java  StdOut.java
ccore/cezdev/: AlertCommand.java  DirectoryCopyCommand.java  PathListCommand.py  _clibraries-crud.bat  _clibraries.crud.bat  _clibraries.modified.bat  alert.bat  cenvironments-modified.bat  cenvironments.crud.bat  cenvironments.modified.bat  cezdev.create.bat  cezdev.crud.bat  cezdev.delete.bat  cezdev.modified.bat  clibraries.crud.bat  clibraries.modified.bat  cplatform-crud.bat  cplatform.crud.bat  cplatform.modified.bat  cprojects-crud.bat  cprojects.crud.bat  cprojects.modified.bat  directory.copy.bat  file.monitor.bat  file.monitor.py  files.copy.bat  files.copyx.bat  files.find.bat  path.append.bat  path.list.bat  script2meta.copy.bat  scripts.call.bat  scripts.copy.bat  version.crud.bat
ccore/cezdev/junk/: cenvironments.crud.bat  cenvironments.modified.bat  clibraries.crud.bat  cplatform.crud copy.bat  cplatform.modified copy 2.bat  (+2 more)
cplatform/cenvironments/cpy/: cpip.bat  cpy.bat  cpy.create.bat  cpy.destroy.bat  cpy.read.bat  cpy.update.bat  pyproject.toml  version.json
libs/: libs.bat
libs/_libs/: _libs.bat
libs/boot/: CCopyFoldersCommand.java  CFilesToPathsCommand.java  CMessageBoxCommand.java  alert.bat  cpfiles.bat  listfiles.bat  myfiles.json  rmmeta.bat
libs/c3dclassessdk/: pom.xml
meta/: ezdev.apps.controls.txt  ezdev.controls.txt  ezdev.envs.controls.txt  vars.txt
meta/c3dclassessdk_java/: pom.xml
stuff/: __.java
(+697 files in other folders)
